<resources>
    <string name="app_name">BlockIT</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="blockit_logo_description">blockit logo</string>
    <string name="logo_description">logo_description</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="select_avatar_profile_pic">Select Avatar (Profile Pic)</string>
    <string name="submit_button_text">Submit</string>
    <string name="new_site_editText_hint">Write new site</string>
</resources>
