<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/login_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/logo_imageView"
        app:layout_constraintStart_toStartOf="@+id/logo_imageView"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/signup_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blockIt_logo"
        app:srcCompat="@drawable/block" />


    <ImageView
        android:id="@+id/blockIt_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/blockit_logo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blockit" />

</android.support.constraint.ConstraintLayout>