<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/email_signup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_signup_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/email_signup_textview"
        app:layout_constraintStart_toStartOf="@+id/email_signup_textview"
        app:layout_constraintTop_toBottomOf="@+id/email_signup_textview" />

    <Button
        android:id="@+id/select_avatar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_user_photo"
        android:drawableEnd="@drawable/ic_cancel_button"
        android:text="@string/select_avatar_profile_pic"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/user_avatar_imageview"
        app:layout_constraintStart_toStartOf="@+id/user_avatar_imageview"
        app:layout_constraintTop_toBottomOf="@+id/user_avatar_imageview" />

    <Button
        android:id="@+id/signup_submit_button"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/submit_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/select_avatar_button"
        app:layout_constraintStart_toStartOf="@+id/select_avatar_button"
        app:layout_constraintTop_toBottomOf="@+id/select_avatar_button" />

    <ImageView
        android:id="@+id/user_avatar_imageview"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/password_signup_textview"
        app:layout_constraintStart_toStartOf="@+id/password_signup_textview"
        app:layout_constraintTop_toBottomOf="@+id/password_signup_textview"
        app:srcCompat="@drawable/ic_user_photo" />
</android.support.constraint.ConstraintLayout>